# JAN-label-public

./: .editorconfig  .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  biome.json  package.json  pnpm-lock.yaml  public-mirror.config.json  tsconfig.base.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  labeler.yml  labels.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml  printer-profile.yml  task.yml
.github/workflows/: ci.yml  codex-ci-autofix.yml  codex-ci-triage.yml  codex-maintenance.yml  codex-pr-comment.yml  codex-pr-review.yml  labeler.yml  release.yml  sync-labels.yml
apps/admin-web/: index.html  package.json
apps/desktop-shell/: README.md  package.json
apps/desktop-shell/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop-shell/src-tauri/capabilities/: default.json
apps/desktop-shell/src-tauri/icons/: icon.icns
apps/desktop-shell/src-tauri/src/: audit_store.rs  main.rs
apps/windows-shell/: App.xaml  App.xaml.cs  AssemblyInfo.cs  DesignerTemplateDocumentFactory.cs  DesignerTemplateWorkspaceHydrator.cs  DesktopShellCompanionClient.cs  JanLabel.WindowsShell.csproj  MainWindow.xaml  MainWindow.xaml.cs  README.md  ShellActions.cs  (+6 more)
apps/windows-shell-core/: ApplicationServices.cs  DesignerDraftBindings.cs  DraftPdfUnsupportedTextException.cs  JanLabel.WindowsShell.Core.csproj  LegacyRuntimePaths.cs  LocalAuditService.cs  LocalMigrationService.cs  LocalProofService.cs  LocalRenderService.cs  LocalStateSchema.cs  LocalTemplateCatalogService.cs  NativeTemplateCatalogLoader.cs  README.md  TemplateCatalogDocumentParser.cs  TemplateCatalogDraftSceneBuilder.cs  TemplateCatalogPdfBuilder.cs  TemplateCatalogPreviewBuilder.cs  TemplateCatalogRenderUtilities.cs  TemplateCatalogSnapshot.cs  WindowsShellAppPaths.cs  WindowsShellPlatform.cs
apps/windows-shell-tests/: DesignerDraftBindingsTests.cs  DesignerTemplateWorkspaceHydratorTests.cs  JanLabel.WindowsShell.Tests.csproj  LocalAuditServiceTests.cs  LocalProofServiceTests.cs  LocalRenderServiceTests.cs  LocalTemplateCatalogServiceTests.cs  NativeTemplateCatalogLoaderTests.cs  TemplateCatalogDraftSceneBuilderTests.cs  TemplateCatalogPdfBuilderTests.cs  TemplateCatalogPreviewBuilderTests.cs  WindowsShellPlatformTests.cs  WorkspaceLiveFactoryTests.cs
crates/print-agent/: Cargo.toml
crates/print-agent/src/: lib.rs
docs/: README.md  architecture.md  domain-model.md  dotnet-convergence.md  github-governance.md  known-issues.md  mvp-backlog.md  print-pipeline.md  public-mirror.md  repo-structure.md  risk-register.md  windows-bootstrap.md  windows-rebuild-plan.md
scripts/: generate-release-notes.mjs  generate-release-readiness.mjs  publish-public-mirror.mjs  validate-fixtures.mjs
(+59 files in other folders)
