[package]
name = "desktop-shell"
version = "0.2.0"
edition = "2021"
build = "build.rs"

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
tauri = { version = "2.10.3", features = [] }
audit-log = { path = "../../../crates/audit-log" }
barcode = { path = "../../../crates/barcode" }
domain = { path = "../../../crates/domain" }
printer-adapters = { path = "../../../crates/printer-adapters" }
print-agent = { path = "../../../crates/print-agent" }
render = { path = "../../../crates/render" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[workspace]
